# py_template

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: build_book.yml  formatting_check.yml
docker/dev/: Dockerfile
docs/: _config.yml  _toc.yml  api.rst  intro.md  references.bib
environments/: dev.yaml  requirements-dev.txt
py_template/: __init__.py
py_template/_src/: _version.py
py_template/_src/utils/: io.py
