[bumpversion]
current_version = 0.0.1

[pytest]
testpaths = tests/

[flake8]
max-line-length = 80
max-complexity = 12
ignore = E501
select = C,E,F,W,B,B9
extend-ignore = E203, W503

[tool:mypy]
warn_unused_ignores = True
warn_redundant_casts = True
ignore_missing_imports = True

[mypy-pdoc.test.example_pkg.*]
ignore_errors = True

[tool:pytest]
testpaths = tests/

[tool:pydocstyle]
convention = google

[isort]
profile = black

[metadata]
name = py-template
author = J. Emmanuel Johnson
author_email = jemanjohnson34@gmail.com
description = My Python Package template
url = ...
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown